--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="default_web_client_id">376801916154-nalv4sp2epdgia3ctrmliteog3pbltk7.apps.googleusercontent.com</string>
+    <string name="default_notification_channel_id" translatable="false">com.example.zen_talk</string>
 </resources>
